--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.10",
+    "motion": "^10.16.4",
     "rxjs": "~7.8.0",
     "sass": "^1.69.0",
     "tslib": "^2.3.0",
